# ai-life-journal

./: .gitignore  .mcp.json.template  AGENTS.md  CLAUDE.md  README.md  setup.ps1  setup.sh
.agents/: config.toml  settings.json  settings.local.json
.agents/rules/: journal.md  knowledge.md  references.md  thoughts.md  works.md
.agents/skills/distill/: SKILL.md
.agents/skills/interviewer/: SKILL.md
.agents/skills/journal/: SKILL.md
.agents/skills/recall/: SKILL.md
.agents/skills/record/: SKILL.md
.agents/skills/review-monthly/: SKILL.md
.agents/skills/review-weekly/: SKILL.md
.agents/skills/status/: SKILL.md
.claude/: settings.json
.claude/rules/: journal.md  knowledge.md  references.md  thoughts.md  works.md
.claude/skills/distill/: SKILL.md
.claude/skills/interviewer/: SKILL.md
.claude/skills/journal/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/record/: SKILL.md
.claude/skills/review-monthly/: SKILL.md
.claude/skills/review-weekly/: SKILL.md
.claude/skills/status/: SKILL.md
knowledge/: _tags.md
profile/: about.md  goals.md
rag-mcp/: pyproject.toml  run.sh
rag-mcp/src/life_rag_mcp/: chunker.py  config.py  database.py  embedder.py  indexer.py  models.py  server.py
rag-mcp/tests/: conftest.py  test_chunker.py  test_database.py  test_embedder.py
scripts/: post-commit
templates/: journal.md  knowledge.md  reference.md  review-weekly.md  thoughts.md  work.md
thoughts/: _tags.md
